deployment-wordpress.yml
kind: Service
apiVersion: v1
metadata:
  name: wordpress-service
  namespace: prodaction
spec:
  ports:
  - port: 80
    protocol: TCP
  #type: LoadBalancer
  selector:
    app: wordpress-app

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deployment
  namespace: prodaction
  labels:
    app: wordpress-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress-app
      track: stable
  template:
    metadata:
      labels:
        app: wordpress-app
        track: stable
    spec:
      containers:
      - name: wordpress-app
        image: irpank/wordpress-bp:tag
        ports:
        - containerPort: 80
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: prodaction
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: blog-cilsy.komarudins.online
    http:
      paths:
      #- path: /
      - backend:
          serviceName: wordpress-service
          servicePort: 80
